@@ -17,6 +17,7 @@
 * Pictures named "aaccbbdd" could prevent internal editor tooltip from properly updating
 * Show dialog if state.dat is inaccessible when updating top10 in an internal or merging state.dat
 * Background menu balls would sometimes vanish on the "Please do not distribute" screen
+* Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
 
 ## Removed Legacy Features
 * It is no longer possible to upgrade from across.res to elma.res
